# keep-me-awake

./: .gitignore  .prettierignore  Cargo.toml  README.md  de.swsnr.keepmeawake.desktop  de.swsnr.keepmeawake.metainfo.xml  deny.toml  entrypoint.js  eslint.config.mjs  hatch_build.py  justfile  main.py  package-lock.json  package.json  pyproject.toml  run.js  tasks.toml  tsconfig.json
.forgejo/workflows/: ci.yaml
dbus-1/: de.swsnr.keepmeawake.service
flatpak/: de.swsnr.keepmeawake.Devel.yaml  de.swsnr.keepmeawake.cargo-sources.json  de.swsnr.keepmeawake.npm-sources.json  de.swsnr.keepmeawake.yaml  pip-build.json
po/: LINGUAS  bg.po  de.po  de.swsnr.keepmeawake.pot  et.po  fi.po  it.po  nl.po  ru.po  xgettext.py  zh_Hans.po
resources/: application-window.blp  de.swsnr.keepmeawake.metainfo.xml  resources.data.gresource.xml  resources.generated.gresource.xml  resources.gresource.xml  shortcuts-dialog.blp
resources/ui/: application-window.blp  shortcuts-dialog.blp
src/: app.rs  app.ts  config.rs  config.ts  main.rs  main.ts  run.ts  types.d.ts
src/app/: inhibit.rs  inhibitor.rs  widgets.rs  widgets.ts
src/app/widgets/: application-window.ts  application_window.rs
src/keep_me_awake/: __init__.py  app.py  config.py  enums.py  gi.py  inhibit.py  log.py  main.py  widgets.py  window.py
src/keep_me_awake/resources/: application-window.blp  resources.gresource.xml
src/keep_me_awake/resources/ui/: shortcuts-dialog.blp
supply-chain/: audits.toml  config.toml
ui/: application-window.blp  resources.ui.gresource.xml
