[package]
name = "keep-me-awake"
description = "Keep your desktop awake"
homepage = "https://codeberg.org/swsnr/keep-me-awake"
repository = "https://codeberg.org/swsnr/keep-me-awake"
license = "EUPL-1.2"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
version = "0.3.0"
edition = "2024"
publish = false
rust-version = "1.87"

[dependencies]
adw = { package = "libadwaita", version = "0.7.0", features = ["v1_7"] }
futures-util = { version = "0.3.31" }
glib = { version = "0.20.9", features = ["log", "log_macros", "v2_84"] }
gtk = { package = "gtk4", version = "0.9.6", features = ["v4_18", "gnome_47"] }
log = "0.4.22"
libc = "0.2.161"

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-message = "Keep Me Awake {{tag_name}}"
publish = false
# Only push after we checked that the release is good
push = false
# The justfile runs all tests before releasing
verify = false
sign-tag = true
sign-commit = true

[[package.metadata.release.pre-release-replacements]]
file = "de.swsnr.keepmeawake.metainfo.xml"
search = "version=\"next\""
replace = "version=\"{{version}}\""
max = 1

[[package.metadata.release.pre-release-replacements]]
file = "de.swsnr.keepmeawake.metainfo.xml"
search = "date=\"9999-01-01\""
replace = "date=\"{{date}}\""
max = 1

[[package.metadata.release.pre-release-replacements]]
file = "de.swsnr.keepmeawake.metainfo.xml"
search = "<url>https://codeberg.org/swsnr/keep-me-awake/releases/tag/next</url>"
replace = "<url>https://codeberg.org/swsnr/keep-me-awake/releases/tag/{{tag_name}}</url>"
max = 1
