[package]
name = "keep-me-awake"
description = "Keep your desktop awake"
homepage = "https://codeberg.org/swsnr/keep-me-awake"
repository = "https://codeberg.org/swsnr/keep-me-awake"
license = "EUPL-1.2"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
version = "0.3.3"
edition = "2024"
publish = false
rust-version = "1.88"

[dependencies]
adw = { package = "libadwaita", version = "0.8.0", features = ["v1_7"] }
futures-util = { version = "0.3.31" }
glib = { version = "0.21.0", features = ["log_macros"] }
gnome-app-utils = { git = "https://codeberg.org/swsnr/gnome-app-utils.rs.git", branch = "main" }
gtk = { package = "gtk4", version = "0.10.0", features = ["gnome_48"] }
formatx = "0.2.4"

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-message = "Keep Me Awake {{tag_name}}"
publish = false
# Only push after we checked that the release is good
push = false
# The justfile runs all tests before releasing
verify = false
sign-tag = true
sign-commit = true

[[package.metadata.release.pre-release-replacements]]
file = "de.swsnr.keepmeawake.metainfo.xml"
search = "version=\"next\""
replace = "version=\"{{version}}\""
max = 1

[[package.metadata.release.pre-release-replacements]]
file = "de.swsnr.keepmeawake.metainfo.xml"
search = "date=\"9999-01-01\""
replace = "date=\"{{date}}\""
max = 1

[[package.metadata.release.pre-release-replacements]]
file = "de.swsnr.keepmeawake.metainfo.xml"
search = "<url>https://codeberg.org/swsnr/keep-me-awake/releases/tag/next</url>"
replace = "<url>https://codeberg.org/swsnr/keep-me-awake/releases/tag/{{tag_name}}</url>"
max = 1
