[package]
name = "keep-me-awake"
description = "Keep your desktop awake"
homepage = "https://codeberg.org/swsnr/keep-me-awake"
repository = "https://codeberg.org/swsnr/keep-me-awake"
license = "EUPL-1.2"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
# Our version number.  Since semver doesn't make much sense for UI applications
# which have no API we repurpose the version numer as follows:
#
# - major: Major new features or major changes to the UI, which may break the app for some users.
# - minor: User-visible features or bugfixes.
# - patch: Translation updates.
#
# Major and minor releases get release notes, but patch releases do not; this
# enables us to ship updates to translations whenever translators contributed
# new languages or made major updates, while still providing meaningful release
# notes for the last functional changes.
version = "1.0.0"
edition = "2024"
publish = false
rust-version = "1.89"

[dependencies]
adw = { package = "libadwaita", version = "0.8.0", features = ["v1_8"] }
futures-util = { version = "0.3.31" }
glib = { version = "0.21.0", features = ["log_macros"] }
gnome-app-utils = { git = "https://codeberg.org/swsnr/gnome-app-utils.rs.git", rev = "d81125b37e7e9be365841b0c2f93fe303cba6dac" }
gtk = { package = "gtk4", version = "0.10.1" }
formatx = "0.2.4"
semver = "1.0.27"

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-message = "Keep me Awake {{tag_name}}"
publish = false
# Only push after we checked that the release is good
push = false
# The justfile runs all tests before releasing
verify = false
sign-tag = true
sign-commit = true

[[package.metadata.release.pre-release-replacements]]
file = "de.swsnr.keepmeawake.metainfo.xml"
search = "version=\"next\""
replace = "version=\"{{version}}\""
max = 1

[[package.metadata.release.pre-release-replacements]]
file = "de.swsnr.keepmeawake.metainfo.xml"
search = "date=\"9999-01-01\""
replace = "date=\"{{date}}\""
max = 1

[[package.metadata.release.pre-release-replacements]]
file = "de.swsnr.keepmeawake.metainfo.xml"
search = "<url>https://codeberg.org/swsnr/keep-me-awake/releases/tag/next</url>"
replace = "<url>https://codeberg.org/swsnr/keep-me-awake/releases/tag/{{tag_name}}</url>"
max = 1
