[project]
name = "keep-me-awake"
description = "Keep your desktop awake"
version = '2.0.0-dev'
requires-python = ">=3.14"
authors = [{ name = "Sebastian Wiesner", email = "sebastian@swsnr.de" }]
readme = "README.md"
license = "EUPL-1.2"
classifiers = ["Private :: Do Not Upload"]
dependencies = ["pygobject>=3.56.0", "packaging"]

[project.urls]
homepage = "https://codeberg.org/swsnr/keep-me-awake"
repository = "https://codeberg.org/swsnr/keep-me-awake.git"
issues = "https://codeberg.org/swsnr/keep-me-awake/issues"

[project.gui-scripts]
"de.swsnr.keepmeawake" = "keep_me_awake.main:main"

[dependency-groups]
dev = ["pygobject-stubs>=2.16.0", "hatchling", "poethepoet>=0.42.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.sdist]
# In source distributions do not include UI files compiled from blueprints, and
# compiled resource files
exclude = ["*.ui", "*.gresource"]

[tool.hatch.build.targets.wheel]
# When building a binary wheel include only the binary resource file but not the
# resource source files
artifacts = ["*.gresource"]
exclude = ["**/keep_me_awake/resources/"]

[tool.poe.tasks]
xgettext = "./po/xgettext.py"
# Linting tasks
"lint:python" = "uvx ruff check ."
"lint:data" = "appstreamcli validate --strict --pedantic --explain de.swsnr.keepmeawake.metainfo.xml"
lint = ["lint:python", "lint:blueprint", "lint:data"]
"format:python" = "uvx ruff format ."

[tool.poe.tasks."lint:blueprint"]
cmd = "blueprint-compiler format src/**/*.blp"
empty_glob = "fail"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingModuleSource = false

[tool.ruff.lint]
select = [
    "ANN",
    "ASYNC",
    "D",
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "RUF",
    "TC",
    "INT",
]
ignore = [
    "TC006",
    # These rules are incompatible with other D rules
    "D203",
    "D213",
]
