[project]
name = "keep-me-awake"
description = "Keep your desktop awake"
version = "2.0.0a1.dev2"
# 3.13 is baseline of Freedesktop 25.08
requires-python = "~=3.13.0"
authors = [{ name = "Sebastian Wiesner", email = "sebastian@swsnr.de" }]
readme = "README.md"
license = "EUPL-1.2"
classifiers = ["Private :: Do Not Upload"]
dependencies = ["pygobject~=3.54.0", "packaging"]

[project.urls]
homepage = "https://codeberg.org/swsnr/keep-me-awake"
repository = "https://codeberg.org/swsnr/keep-me-awake.git"
issues = "https://codeberg.org/swsnr/keep-me-awake/issues"

[project.gui-scripts]
"de.swsnr.keepmeawake" = "keep_me_awake.main:main"

[dependency-groups]
dev = ["pygobject-stubs>=2.16.0", "hatchling", "poethepoet>=0.42.1", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.sdist]
# In source distributions do not include UI files compiled from blueprints, and
# compiled resource files
exclude = ["*.ui", "*.gresource"]

[tool.hatch.build.targets.wheel]
# When building a binary wheel include only the binary resource file but not the
# resource source files
artifacts = ["*.gresource"]
exclude = ["**/keep_me_awake/resources/"]

[tool.poe.tasks]
lint = ["lint:python", "lint:blueprint", "lint:data"]
format = ["format:python", "format:blueprint"]
xgettext = "./po/xgettext.py"
"format:python" = "ruff format ."
"lint:python" = "ruff check ."

[tool.poe.tasks."lint:blueprint"]
cmd = "blueprint-compiler lint src/**/*.blp"
empty_glob = "fail"
executor = "simple"

[tool.poe.tasks."format:blueprint"]
cmd = "blueprint-compiler format src/**/*.blp"
empty_glob = "fail"
executor = "simple"

[tool.poe.tasks."lint:data"]
cmd = "appstreamcli validate --strict --pedantic --explain de.swsnr.keepmeawake.metainfo.xml"
executor = "simple"

[tool.poe.tasks."optimize-pngs"]
cmd = "oxipng media/**/*.png"
empty_glob = "fail"
executor = "simple"

[tool.poe.tasks."build-social-image"]
cmd = """
montage -geometry 602x602+19+19 \
    media/screenshots/inhibit-nothing.png media/screenshots/inhibit-suspend-and-idle.png \
    media/social-image.png
"""
executor = "simple"

[tool.poe.tasks."flatpak:devel-install"]
cmd = """
flatpak run org.flatpak.Builder --force-clean --user --install
    --install-deps-from=flathub --repo=.flatpak-repo
    .flatpak-builddir flatpak/de.swsnr.keepmeawake.Devel.yaml
"""
executor = "simple"

[tool.pyright]
include = ["src/", "po/*.py", "hatch_build.py"]
typeCheckingMode = "strict"
reportMissingModuleSource = false
reportUninitializedInstanceVariable = true
reportMissingSuperCall = true

[tool.ruff.lint]
select = [
    "ANN",
    "ASYNC",
    "D",
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "RUF",
    "TC",
    "INT",
]
ignore = [
    "TC006",
    # These rules are incompatible with other D rules
    "D203",
    "D213",
]
